# vpn-shop-bot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: AGENT_BRIEF.md  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_promo_trial.py  0003_servers.py
backend/backend/: __init__.py  config.py  db.py  deps.py  errors.py  main.py  models.py  scheduler.py  xui.py  xui_pool.py
backend/backend/payments/: __init__.py  base.py  cryptobot.py  factory.py  test_provider.py  yookassa.py
backend/backend/routers/: __init__.py  admin.py  admin_servers.py  health.py  payments.py  plans.py  promos.py  subscription_public.py  subscriptions.py  users.py
backend/backend/services/: __init__.py  issuance.py  payments.py  plans.py  promos.py  servers.py  subscriptions.py  users.py
backend/tests/: conftest.py  test_adapters.py  test_api.py  test_api_admin_servers.py  test_api_promos.py  test_services_payments.py  test_services_plans.py  test_services_promos.py  test_services_servers.py  test_services_subscriptions.py  test_services_users.py  test_subscription_public.py
bot/: AGENT_BRIEF.md  Dockerfile  pyproject.toml
bot/bot/: __init__.py  __main__.py  config.py
bot/bot/api_client/: __init__.py  errors.py
bot/bot/filters/: __init__.py  menu.py
bot/bot/handlers/: __init__.py  admin.py  buy.py  common.py  help.py  my_subs.py  promo.py  start.py  support.py  trial.py
bot/bot/i18n/: __init__.py  catalog.py
bot/bot/keyboards/: inline.py  reply.py
bot/bot/middlewares/: i18n.py  throttle.py  user_upsert.py
bot/bot/states/: __init__.py  buy.py  promo.py
bot/bot/utils/: __init__.py  happ.py  vpn_instructions.py
bot/tests/: test_api_client.py  test_api_client_promo.py  test_happ.py  test_i18n.py
shared/: pyproject.toml
shared/shared/: __init__.py  enums.py
shared/shared/contracts/: __init__.py  errors.py  http.py  xui.py
shared/shared/schemas/: __init__.py  payment.py  plan.py  promo.py  server.py  subscription.py  user.py
shared/tests/: test_schemas.py
xui_client/: AGENT_BRIEF.md  README.md  pyproject.toml
xui_client/tests/: conftest.py  test_client.py  test_qr.py  test_units.py  test_vless.py
xui_client/xui_client/: __init__.py  client.py  qr.py  retries.py  testing.py  vless.py
