[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-shop-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "vpn-shop-shared",
    "vpn-shop-xui-client",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "yookassa>=3.0",
    "aiocryptopay>=0.3",
    "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
