[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-shop-bot-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "vpn-shop-shared",
    "aiogram>=3.7,<4",
    "aiogram-i18n>=1.3",
    "babel>=2.15",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "../shared"
explicit_package_bases = true
exclude = ["build/", "dist/"]

[[tool.mypy.overrides]]
module = ["aiogram.*", "aiogram_i18n.*", "babel.*"]
ignore_missing_imports = true
