[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-shop-shared"
version = "0.1.0"
description = "Shared contracts, schemas and enums for vpn-shop-bot monorepo"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.setuptools.package-data]
shared = ["py.typed"]
