[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-shop-xui-client"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "vpn-shop-shared",
    "py3xui>=0.5",
    "qrcode[pil]>=7.4",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-qrcode>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xui_client*"]
